--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.username=root
+spring.datasource.password=1995
+spring.datasource.url=jdbc:mysql://localhost:3306/guru
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+logging.level.root=info
+
 
