--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,9 @@ spring.jpa.hibernate.ddl-auto=create
 logging.level.root=info
 
 
+server.port=8080
+server.servlet.context-path=/
+
+#spring.thymeleaf.prefix=/templates.books/
+#spring.thymeleaf.suffix=.html
+
